# OOP-memorie-dinamica

./: CMakeLists.txt  README.md  main.c
controllers/: controllers.c  controllers.h
domain/: models.c  models.h  validators.c  validators.h
repos/: repos.c  repos.h
tests/: controllerTests.c  controllerTests.h  repoTests.c  repoTests.h  tests.c  tests.h  utilsTests.c  utilsTests.h  validatorsTest.c  validatorsTest.h
ui/: ui.c  ui.h
utils/: utils.c  utils.h
